# nat-induction-heads-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  openwebtext_samples.json  wikitext_samples.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: induction_heads_transformer_mechanistic_interpretability_20260320_233812.jsonl  transformer_circuits_induction_head_formation_training_data_distribution_20260320_234227.jsonl
papers/: README.md
papers/pages/bietti2023_birth_transformer/: bietti2023_birth_transformer_manifest.txt
papers/pages/edelman2024_statistical_induction_heads/: edelman2024_statistical_induction_heads_manifest.txt
papers/pages/olsson2022/: olsson2022_induction_heads_manifest.txt
papers/pages/selective_induction_heads_2025/: selective_induction_heads_2025_manifest.txt
papers/pages/semantic2024/: semantic_induction_heads_2024_manifest.txt
results/: deep_analysis_results.json  deep_scores.npz  experiment_results.json  scores.npz
src/: deep_analysis.py  fix_json.py  induction_detection.py  plot_results.py
(+2 files in other folders)
