[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for naturalistic induction heads"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.3",
    "einops>=0.8.2",
    "jaxtyping>=0.3.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformer-lens>=2.15.4",
    "transformers<4.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
